[project]
name = "guavahealthvisualizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "plotly>=6.2.0",
    "scipy>=1.15.3",
    "streamlit>=1.48.0",
    "lxml==5.*; platform_system == 'Windows'",
    "lxml>=6.0.0; platform_system != 'Windows'",
]
